# carmageddon

./: CMakeLists.txt  README.md  setup.sh
html/: package-lock.json  package.json
html/src/app/: app.component.ts  app.html  app.module.ts  app.routes.ts  camera.service.ts  car.service.ts
html/src/app/camera-status/: camera-status.component.ts  camera-status.html  camera-status.scss
html/src/app/car-status/: car-status.component.ts  car-status.html  car-status.scss
html/src/app/error/no_lifeline/: no_lifeline.component.ts  (+2 more)
html/src/app/header/: header.component.ts  header.html  header.scss
html/src/app/lifeline/: lifeline.component.ts  lifeline.html  lifeline.scss
html/src/app/manual/: manual.component.ts  manual.html  manual.module.ts  manual.scss
html/src/app/observer-tabs/: observer-tabs.routes.ts
html/src/app/off/: off.component.ts  off.html  off.scss
html/src/app/webcam/: webcam.component.ts  webcam.html
html/src/assets/config/: application.bb.json  application.local.json
html/src/styles/: styles.scss
scripts/: setup_bb.sh
src/: cpu.cpp  cpu.h  main.cpp
src/domain/: camera.cpp  camera.h  car.cpp  car.h  engine.cpp  engine.h  observer.h  pwm.cpp  pwm.h  pwmmock.cpp  steer.cpp  steer.h
src/observers/: lane_detection.cpp  lane_detection.h  traffic_light.cpp  traffic_light.h
src/rest/: camera_resource.cpp  camera_resource.h  car_resource.cpp  car_resource.h  carstatus_handler.cpp  carstatus_handler.h  lifeline_handler.cpp  lifeline_handler.h  observer_resource.cpp  observer_resource.h  rest.cpp  rest.h
src/util/: util.cpp  util.h
(+3 files in other folders)
